# BatchRename

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
utils/: enums.h  utils.cpp  utils.h
widgets/: AddDirMsgBox.cpp  AddDirMsgBox.h  BrPallet.cpp  BrPallet.h  BrPalletFindAndRepl.cpp  BrPalletFindAndRepl.h  BrWidgetRulesList.cpp  BrWidgetRulesList.h  BrWidgetTable.cpp  BrWidgetTable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
